objects/CQS_Collaborazioni__c.object
<CustomObject>
    <description>Questo Oggetto Custom è utilizzato solo nel Cruscotto Qualità e Sicurezza</description>
    <fields>
        <fullName>CQS_Comune_Collaborazione__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Impresa_Esecutrice_Collaborazioni__c</fullName>
        <label>Impresa Esecutrice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Impresa_Mandataria_Collaborazioni__c</fullName>
        <label>Impresa Mandataria</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_Provincia_Collaborazioni__c</fullName>
        <label>Provincia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Area_Cavo_Collaborazioni__c</fullName>
        <label>Area Cavo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OF_CQS_DB_Data_Scadenza_Collaborazione__c</fullName>
        <defaultValue>Today() + 1</defaultValue>
        <label>Data Scadenza Collaborazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Data_Contratto_Collaborazione__c</fullName>
        <label>Data Contratto Collaborazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Informazioni_di_Test__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Informazioni di Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CQS_Lotto_Collaborazioni__c</fullName>
        <label>Lotto</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validit_Contratto_Collaborazione2__c</fullName>
        <formula>IF(OR((Today()&lt;= OF_CQS_DB_Data_Scadenza_Collaborazione__c),  OF_CQS_DB_Data_Scadenza_Collaborazione__c = null), true, false)</formula>
        <label>Validità Contratto Collaborazione</label>
        <type>Checkbox</type>
    </fields>
    <label>Collaborazione</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CQS_Comune_Collaborazione__c</columns>
        <columns>OF_CQS_Lotto_Collaborazioni__c</columns>
        <columns>CQS_Impresa_Mandataria_Collaborazioni__c</columns>
        <columns>CQS_Impresa_Esecutrice_Collaborazioni__c</columns>
        <columns>OF_CQS_Data_Contratto_Collaborazione__c</columns>
        <columns>OF_CQS_DB_Data_Scadenza_Collaborazione__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>CQS_Responsabile_Territoriale_Centro</role>
            <role>CQS_Responsabile_Territoriale_Nord</role>
            <role>CQS_Responsabile_Territoriale_Sud</role>
            <role>Open_Fiber_Roma_HSFQ</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>C - {0000}</displayFormat>
        <label>Collaborazione</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>